# blank1

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.staging.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/api/: CLAUDE.md  Dockerfile  alembic.controlplane.ini  alembic.ini  alembic.tenant.ini  pyproject.toml
apps/api/app/: cli.py  main.py  worker.py
apps/api/app/admin/: models.py  router.py  service.py  tasks.py
apps/api/app/ai/: __init__.py  admin_service.py  gateway.py  metering.py  models.py  policy.py  pricing.py  quota.py  router.py  tasks.py
apps/api/app/audit/: router.py  service.py  tenant_models.py
apps/api/app/auth/: deps.py  models.py  oauth.py  permissions.py  rate_limit.py  router.py  service.py  tasks.py  tokens.py
apps/api/app/automation/: __init__.py  contract.py  (+5 more)
apps/api/migrations/: env.py
apps/api/tests/: ai_helpers.py  conftest.py  connector_helpers.py  helpers.py  module_helpers.py  test_admin_routes.py  test_ai_routes.py  test_audit_events.py  test_auth_purge.py  test_auth_sessions.py  test_cli.py  test_config.py  test_connector_capabilities.py  test_connector_oauth.py  test_connector_refresh.py  test_connector_routes.py  test_connector_throttle.py  test_connector_webhooks.py  test_crypto.py  test_engine_manager.py  test_gateway.py  test_gdpr_erasure.py  test_gdpr_export.py  test_health.py  test_invitations.py  test_metering.py  test_migrations_runner.py  test_module_activation.py  test_module_contract.py  test_module_isolation.py  test_module_mounting.py  test_module_scheduler.py  test_oauth_login.py  test_permissions.py  test_policy.py  test_pricing.py  test_provisioning.py  test_quota.py  test_rate_limit.py  test_request_id.py  (+7 more)
(+159 files in other folders)
