[project]
name = "api"
version = "0.1.0"
description = "Backend FastAPI + worker Celery du socle SaaS multi-tenant"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "structlog>=24.4",
    "celery[redis]>=5.4",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "typer>=0.15",
    "authlib>=1.3",
    "argon2-cffi>=23.1",
    "pyotp>=2.9",
    "cryptography>=43.0",
    "email-validator>=2.2",
    "httpx>=0.27",
    "google-api-python-client>=2.150",
    "google-auth>=2.35",
    "anyio>=4.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "pyright[nodejs]>=1.1.390",
    "fakeredis>=2.26",
]

[project.scripts]
saas = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
